...
                                <ShakingLogo />
                            </View>
                        </View>
                        <View style={styles.mainView}>
                            <View style={styles.logoInputView}>
                                <InputField
                                    placeholder="Enter your email"
                                    value={email}
                                    onChangeText={(val) => setEmail(val)}
                                    inputMode="email"
                                    accessibilityLabel="email-field"
                                />
                                <InputField
                                    placeholder="Enter your password"
                                    value={password}
                                    onChangeText={(val) => setPassword(val)}
                                    inputMode="text"
                                    password={true}
                                    accessibilityLabel="password-field"
                                />
                                {signUpView && (
                                    <InputField
                                        placeholder="Confirm your password"
                                        value={passwordConfirm}
                                        onChangeText={(val) =>
...
                                        accessibilityLabel="signup-button"
                                    />
                                </View>
                            ) : (
                                <View style={styles.buttonsView}>
                                    <Button
                                        title="Sign In"
                                        onPress={() => {
                                            signInHandler();
                                        }}
                                        accessibilityLabel="signin-button"
                                    />
                                    <View style={styles.socialView}>
                                        <Button
                                            title={
                                                <FontAwesome
                                                    name="google"
...
