...
                    <FlatList
                        data={sessionGroups}
                        ListFooterComponent={() => (
                            <>
                                {/* FOR TEST ONLY !!!
                                <SessionGroup
                                    name="TMS"
                                    id="123123123"
                                    totalMinutes={0}
                                    focusTimer={0.1}
                                    breakTimer={0.1}
                                /> */}
                                <SessionGroup name="Add new" addNew={true} />
...
                                size={Sizes.buttonIcon}
                            />
                        }
                        onPress={() => {
                            router.navigate("/settings");
                        }}
                        accessibilityLabel="settings-button"
                        icon={true}
                    />
                </View>
            </View>
        </>
    );
...
