...
    useEffect(() => {
        if (transferRecived) reset();
    }, [transferRecived]);

    // Reset message to prevent accidental press
    const resetMessage = useCallback((): void => {
        setMessage("Hold for 1 second to reset");
        setTimeout(() => {
            setMessage("");
        }, 5000);
    }, []);

    return (
        <View style={styles.root}>
            <View style={styles.titleView}>
                <Text style={styles.titleText}>
                    {timerMode === "break" ? "Break" : "Focus"}
                </Text>
                <View
                    style={{
                        opacity: timerMode === "break" ? 1 : 0,
                        pointerEvents: timerMode === "break" ? "auto" : "none",
                    }}
                >
                    <Button
                        title="Skip"
                        noSpace={true}
                        onPress={() => skip()}
                    />
                </View>
            </View>
            <View style={styles.timeView}>
...
            <View style={styles.timerButtonsView}>
                <View style={styles.topButtonsView}>
                    <Button
                        title={<Ionicons name="play" size={Sizes.buttonIcon} />}
                        icon={true}
                        onPress={() => start()}
                        accessibilityLabel="play-button"
                    />
                    <Button
                        title={
                            <Ionicons name="pause" size={Sizes.buttonIcon} />
                        }
                        icon={true}
                        onPress={() => stop()}
                        accessibilityLabel="stop-button"
                    />
                </View>
                <View style={styles.bottomButtonsView}>
                    <Button
                        title={
                            <Ionicons name="refresh" size={Sizes.buttonIcon} />
                        }
                        icon={true}
                        onPress={() => resetMessage()}
                        onLongPress={() => reset()}
                        accessibilityLabel="reset-button"
                    />
                </View>
            </View>
        </View>
    );
}
...
