...
    };

    // Messege state
    const messageTimer = () => {
        if (messageTimerRef.current) clearTimeout(messageTimerRef.current);
        messageTimerRef.current = setTimeout(() => setMessage(""), 5000);
        setMessage("Reset the timer first!");
    };

    return {
        // group info
        id, name, focusTimer, breakTimer, anonymousMode,
        // timer
...
