appId: com.koleks92.AvocadoroMobile # This is an example app id. Replace it with your app id.
---
## Log out before if logged in !
## Run index/signup-correct !

- launchApp
- assertVisible: "settings-button"
- tapOn: "settings-button"
- assertVisible: "go-back-button"
- assertVisible: "Settings"
- assertVisible: "delete-button"
- tapOn: "delete-button"
- assertVisible: "We're sorry to see you go."
- assertVisible: "If you delete your account, you'll lose access to your progress and saved settings forever."
- assertVisible: "delete-button-confirm"
- assertVisible: "go-back-button"
- tapOn: "go-back-button"
- assertVisible: "delete-button"


